notifications/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
    - port: 8080
      targetPort: 8080
      protocol: TCP
