notifications/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: ws.sudarshan.cloud
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: notification
                port:
                  number: 8090
